--- a/covid-19-3-28.ipynb
+++ b/covid-19-3-28.ipynb
@@ -559,14 +559,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "df = pd.read_csv('https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports/03-27-2020.csv',\n",
-    "                 error_bad_lines=False)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -827,6 +819,73 @@
    ],
    "source": [
     "df[df.Country_Region=='US'].sort_values(by='Province_State')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Something strange about the data direct from github"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[      Unnamed: 0     FIPS     Admin2  Province_State      Country_Region  \\\n",
+       " 0            NaN  45001.0  Abbeville  South Carolina                  US   \n",
+       " 1            NaN  22001.0     Acadia       Louisiana                  US   \n",
+       " 2            NaN  51001.0   Accomack        Virginia                  US   \n",
+       " 3            NaN  16001.0        Ada           Idaho                  US   \n",
+       " 4            NaN  19001.0      Adair            Iowa                  US   \n",
+       " ...          ...      ...        ...             ...                 ...   \n",
+       " 3424         NaN      NaN        NaN             NaN           Venezuela   \n",
+       " 3425         NaN      NaN        NaN             NaN             Vietnam   \n",
+       " 3426         NaN      NaN        NaN             NaN  West Bank and Gaza   \n",
+       " 3427         NaN      NaN        NaN             NaN              Zambia   \n",
+       " 3428         NaN      NaN        NaN             NaN            Zimbabwe   \n",
+       " \n",
+       "               Last_Update        Lat       Long_  Confirmed  Deaths  \\\n",
+       " 0     2020-03-27 22:14:55  34.223334  -82.461707          4       0   \n",
+       " 1     2020-03-27 22:14:55  30.295065  -92.414197          8       1   \n",
+       " 2     2020-03-27 22:14:55  37.767072  -75.632346          2       0   \n",
+       " 3     2020-03-27 22:14:55  43.452658 -116.241552         54       0   \n",
+       " 4     2020-03-27 22:14:55  41.330756  -94.471059          1       0   \n",
+       " ...                   ...        ...         ...        ...     ...   \n",
+       " 3424  2020-03-27 23:23:03   6.423800  -66.589700        107       1   \n",
+       " 3425  2020-03-27 23:23:03  14.058324  108.277199        163       0   \n",
+       " 3426  2020-03-27 23:23:03  31.952200   35.233200         91       1   \n",
+       " 3427  2020-03-27 23:23:03 -13.133897   27.849332         22       0   \n",
+       " 3428  2020-03-27 23:23:03 -19.015438   29.154857          5       1   \n",
+       " \n",
+       "       Recovered  Active                   Combined_Key  \n",
+       " 0             0       0  Abbeville, South Carolina, US  \n",
+       " 1             0       0          Acadia, Louisiana, US  \n",
+       " 2             0       0         Accomack, Virginia, US  \n",
+       " 3             0       0                 Ada, Idaho, US  \n",
+       " 4             0       0                Adair, Iowa, US  \n",
+       " ...         ...     ...                            ...  \n",
+       " 3424         31      75                      Venezuela  \n",
+       " 3425         20     143                        Vietnam  \n",
+       " 3426         17      73             West Bank and Gaza  \n",
+       " 3427          0      22                         Zambia  \n",
+       " 3428          0       4                       Zimbabwe  \n",
+       " \n",
+       " [3429 rows x 13 columns]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_html(url)\n",
+    "df"
    ]
   },
   {
