--- a/covid-19-3-28.ipynb
+++ b/covid-19-3-28.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -812,13 +812,471 @@
        "[3181 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[df.Country_Region=='US'].sort_values(by='Province_State')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>Admin2</th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th>Last_Update</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long_</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Active</th>\n",
+       "      <th>Combined_Key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34033.0</td>\n",
+       "      <td>Salem</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>39.587197</td>\n",
+       "      <td>-75.346966</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Salem, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34009.0</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>39.150088</td>\n",
+       "      <td>-74.801702</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cape May, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34011.0</td>\n",
+       "      <td>Cumberland</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>39.371994</td>\n",
+       "      <td>-75.107126</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cumberland, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34001.0</td>\n",
+       "      <td>Atlantic</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>39.475387</td>\n",
+       "      <td>-74.658485</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Atlantic, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34041.0</td>\n",
+       "      <td>Warren</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.859518</td>\n",
+       "      <td>-74.995565</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Warren, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34015.0</td>\n",
+       "      <td>Gloucester</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>39.715811</td>\n",
+       "      <td>-75.139955</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Gloucester, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34019.0</td>\n",
+       "      <td>Hunterdon</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.563352</td>\n",
+       "      <td>-74.912842</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Hunterdon, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34037.0</td>\n",
+       "      <td>Sussex</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>41.138916</td>\n",
+       "      <td>-74.691182</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Sussex, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34005.0</td>\n",
+       "      <td>Burlington</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>39.876811</td>\n",
+       "      <td>-74.669278</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Burlington, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34007.0</td>\n",
+       "      <td>Camden</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>39.803438</td>\n",
+       "      <td>-74.963888</td>\n",
+       "      <td>95</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Camden, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34021.0</td>\n",
+       "      <td>Mercer</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.280470</td>\n",
+       "      <td>-74.704796</td>\n",
+       "      <td>131</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Mercer, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34035.0</td>\n",
+       "      <td>Somerset</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.564657</td>\n",
+       "      <td>-74.616830</td>\n",
+       "      <td>222</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Somerset, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34027.0</td>\n",
+       "      <td>Morris</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.860953</td>\n",
+       "      <td>-74.545537</td>\n",
+       "      <td>391</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Morris, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34029.0</td>\n",
+       "      <td>Ocean</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>39.889545</td>\n",
+       "      <td>-74.280893</td>\n",
+       "      <td>484</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ocean, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34031.0</td>\n",
+       "      <td>Passaic</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>41.032386</td>\n",
+       "      <td>-74.299541</td>\n",
+       "      <td>484</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Passaic, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34039.0</td>\n",
+       "      <td>Union</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.658354</td>\n",
+       "      <td>-74.306801</td>\n",
+       "      <td>519</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Union, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34017.0</td>\n",
+       "      <td>Hudson</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.737662</td>\n",
+       "      <td>-74.075157</td>\n",
+       "      <td>594</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Hudson, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34025.0</td>\n",
+       "      <td>Monmouth</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.265497</td>\n",
+       "      <td>-74.222407</td>\n",
+       "      <td>634</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Monmouth, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34023.0</td>\n",
+       "      <td>Middlesex</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.436299</td>\n",
+       "      <td>-74.414270</td>\n",
+       "      <td>640</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Middlesex, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34013.0</td>\n",
+       "      <td>Essex</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.786813</td>\n",
+       "      <td>-74.246580</td>\n",
+       "      <td>826</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Essex, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>34003.0</td>\n",
+       "      <td>Bergen</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>40.960109</td>\n",
+       "      <td>-74.071643</td>\n",
+       "      <td>1505</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bergen, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Unassigned</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-27 22:14:55</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Unassigned, New Jersey, US</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        FIPS      Admin2 Province_State Country_Region          Last_Update  \\\n",
+       "NaN  34033.0       Salem     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34009.0    Cape May     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34011.0  Cumberland     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34001.0    Atlantic     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34041.0      Warren     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34015.0  Gloucester     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34019.0   Hunterdon     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34037.0      Sussex     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34005.0  Burlington     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34007.0      Camden     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34021.0      Mercer     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34035.0    Somerset     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34027.0      Morris     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34029.0       Ocean     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34031.0     Passaic     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34039.0       Union     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34017.0      Hudson     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34025.0    Monmouth     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34023.0   Middlesex     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34013.0       Essex     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN  34003.0      Bergen     New Jersey             US  2020-03-27 22:14:55   \n",
+       "NaN      NaN  Unassigned     New Jersey             US  2020-03-27 22:14:55   \n",
+       "\n",
+       "           Lat      Long_  Confirmed  Deaths  Recovered  Active  \\\n",
+       "NaN  39.587197 -75.346966          3       0          0       0   \n",
+       "NaN  39.150088 -74.801702          7       0          0       0   \n",
+       "NaN  39.371994 -75.107126          9       0          0       0   \n",
+       "NaN  39.475387 -74.658485         14       0          0       0   \n",
+       "NaN  40.859518 -74.995565         38       0          0       0   \n",
+       "NaN  39.715811 -75.139955         40       0          0       0   \n",
+       "NaN  40.563352 -74.912842         52       0          0       0   \n",
+       "NaN  41.138916 -74.691182         65       0          0       0   \n",
+       "NaN  39.876811 -74.669278         88       0          0       0   \n",
+       "NaN  39.803438 -74.963888         95       1          0       0   \n",
+       "NaN  40.280470 -74.704796        131       0          0       0   \n",
+       "NaN  40.564657 -74.616830        222       1          0       0   \n",
+       "NaN  40.860953 -74.545537        391       1          0       0   \n",
+       "NaN  39.889545 -74.280893        484       1          0       0   \n",
+       "NaN  41.032386 -74.299541        484       7          0       0   \n",
+       "NaN  40.658354 -74.306801        519       0          0       0   \n",
+       "NaN  40.737662 -74.075157        594       2          0       0   \n",
+       "NaN  40.265497 -74.222407        634       3          0       0   \n",
+       "NaN  40.436299 -74.414270        640       0          0       0   \n",
+       "NaN  40.786813 -74.246580        826       4          0       0   \n",
+       "NaN  40.960109 -74.071643       1505       6          0       0   \n",
+       "NaN   0.000000   0.000000       1984      82          0       0   \n",
+       "\n",
+       "                   Combined_Key  \n",
+       "NaN       Salem, New Jersey, US  \n",
+       "NaN    Cape May, New Jersey, US  \n",
+       "NaN  Cumberland, New Jersey, US  \n",
+       "NaN    Atlantic, New Jersey, US  \n",
+       "NaN      Warren, New Jersey, US  \n",
+       "NaN  Gloucester, New Jersey, US  \n",
+       "NaN   Hunterdon, New Jersey, US  \n",
+       "NaN      Sussex, New Jersey, US  \n",
+       "NaN  Burlington, New Jersey, US  \n",
+       "NaN      Camden, New Jersey, US  \n",
+       "NaN      Mercer, New Jersey, US  \n",
+       "NaN    Somerset, New Jersey, US  \n",
+       "NaN      Morris, New Jersey, US  \n",
+       "NaN       Ocean, New Jersey, US  \n",
+       "NaN     Passaic, New Jersey, US  \n",
+       "NaN       Union, New Jersey, US  \n",
+       "NaN      Hudson, New Jersey, US  \n",
+       "NaN    Monmouth, New Jersey, US  \n",
+       "NaN   Middlesex, New Jersey, US  \n",
+       "NaN       Essex, New Jersey, US  \n",
+       "NaN      Bergen, New Jersey, US  \n",
+       "NaN  Unassigned, New Jersey, US  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.Province_State=='New Jersey'].sort_values(by='Confirmed')"
    ]
   },
   {
@@ -830,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +1336,7 @@
        " [3429 rows x 13 columns]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
