--- a/covid-19-3-31.ipynb
+++ b/covid-19-3-31.ipynb
@@ -33,13 +33,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "header = {\n",
-    "  \"User-Agent\": \"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.75 Safari/537.36\",\n",
-    "  \"X-Requested-With\": \"XMLHttpRequest\"\n",
-    "}\n",
+    "def daily_url(mmddyy: str) -> str:\n",
+    "    return f'https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports/{date}.csv'\n",
     "\n",
-    "r = requests.get(url, headers=header)\n",
-    "df = pd.read_html(r.text, header=[0], index_col=1)[0]"
+    "\n",
+    "def daily_snapshot(date: str) -> pd.DataFrame:\n",
+    "    '''date in mm-dd-yyyy format'''\n",
+    "    header = {\n",
+    "      \"User-Agent\": \"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.75 Safari/537.36\",\n",
+    "      \"X-Requested-With\": \"XMLHttpRequest\"\n",
+    "    }\n",
+    "\n",
+    "    r = requests.get(url, headers=header)\n",
+    "    df = pd.read_html(r.text, header=[0], index_col=1)[0]\n",
+    "    return df"
    ]
   },
   {
@@ -47,6 +54,177 @@
    "metadata": {},
    "source": [
     "#### quick glance at the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Admin2</th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th>Last_Update</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long_</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Active</th>\n",
+       "      <th>Combined_Key</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FIPS</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>45001.0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Abbeville</td>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-31 23:43:56</td>\n",
+       "      <td>34.223334</td>\n",
+       "      <td>-82.461707</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Abbeville, South Carolina, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22001.0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Acadia</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-31 23:43:56</td>\n",
+       "      <td>30.295065</td>\n",
+       "      <td>-92.414197</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Acadia, Louisiana, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51001.0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Accomack</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-31 23:43:56</td>\n",
+       "      <td>37.767072</td>\n",
+       "      <td>-75.632346</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Accomack, Virginia, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16001.0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ada</td>\n",
+       "      <td>Idaho</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-31 23:43:56</td>\n",
+       "      <td>43.452658</td>\n",
+       "      <td>-116.241552</td>\n",
+       "      <td>195</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ada, Idaho, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19001.0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adair</td>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-31 23:43:56</td>\n",
+       "      <td>41.330756</td>\n",
+       "      <td>-94.471059</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Adair, Iowa, US</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Unnamed: 0     Admin2  Province_State Country_Region  \\\n",
+       "FIPS                                                            \n",
+       "45001.0         NaN  Abbeville  South Carolina             US   \n",
+       "22001.0         NaN     Acadia       Louisiana             US   \n",
+       "51001.0         NaN   Accomack        Virginia             US   \n",
+       "16001.0         NaN        Ada           Idaho             US   \n",
+       "19001.0         NaN      Adair            Iowa             US   \n",
+       "\n",
+       "                 Last_Update        Lat       Long_  Confirmed  Deaths  \\\n",
+       "FIPS                                                                     \n",
+       "45001.0  2020-03-31 23:43:56  34.223334  -82.461707          4       0   \n",
+       "22001.0  2020-03-31 23:43:56  30.295065  -92.414197         39       1   \n",
+       "51001.0  2020-03-31 23:43:56  37.767072  -75.632346          7       0   \n",
+       "16001.0  2020-03-31 23:43:56  43.452658 -116.241552        195       3   \n",
+       "19001.0  2020-03-31 23:43:56  41.330756  -94.471059          1       0   \n",
+       "\n",
+       "         Recovered  Active                   Combined_Key  \n",
+       "FIPS                                                       \n",
+       "45001.0          0       0  Abbeville, South Carolina, US  \n",
+       "22001.0          0       0          Acadia, Louisiana, US  \n",
+       "51001.0          0       0         Accomack, Virginia, US  \n",
+       "16001.0          0       0                 Ada, Idaho, US  \n",
+       "19001.0          0       0                Adair, Iowa, US  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = daily_snapshot('03-31-2020')\n",
+    "df.head()"
    ]
   },
   {
@@ -58,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +376,7 @@
        "max    63153.000000  77635.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +543,7 @@
        "max    7024.000000     0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1306,7 @@
        "Recovered                      0       7024       0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1891,7 +2069,7 @@
        "Wyoming                        0          0       0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1902,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2367,7 +2545,7 @@
        "34009.0          0       0    Cape May, New Jersey, US  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2378,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2843,7 +3021,7 @@
        "34041.0          0       0      Warren, New Jersey, US  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2854,7 +3032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3949,7 +4127,7 @@
        "NaN              0       0     Unassigned, New York, US  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3960,7 +4138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4209,7 +4387,7 @@
        "NaN              0       0    Unassigned, New Hampshire, US  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4220,7 +4398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4395,7 +4573,7 @@
        "34           8187369               78.1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4407,7 +4585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4693,7 +4871,7 @@
        "9        —        —          —          —  38.904148  -77.017094  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4719,7 +4897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4728,7 +4906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4740,7 +4918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -5500,7 +5678,7 @@
        "50           578759            0.018833  0.000000     0.000000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5511,7 +5689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -6271,7 +6449,7 @@
        "27          1934408            0.008892  0.000155     1.744186  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6282,7 +6460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -7042,7 +7220,7 @@
        "50           578759            0.018833  0.000000     0.000000  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7053,7 +7231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -7202,7 +7380,7 @@
        "max              0.389816   0.007968     4.563681  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
