--- a/analysis/covid-19-3-31-state.ipynb
+++ b/analysis/covid-19-3-31-state.ipynb
@@ -1155,107 +1155,107 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Bergen County</td>\n",
+       "      <td>Bergen</td>\n",
        "      <td>929999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Middlesex County</td>\n",
+       "      <td>Middlesex</td>\n",
        "      <td>826698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Essex County</td>\n",
+       "      <td>Essex</td>\n",
        "      <td>793555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Hudson County</td>\n",
+       "      <td>Hudson</td>\n",
        "      <td>668631</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Monmouth County</td>\n",
+       "      <td>Monmouth</td>\n",
        "      <td>623387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Ocean County</td>\n",
+       "      <td>Ocean</td>\n",
        "      <td>591939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Union County</td>\n",
+       "      <td>Union</td>\n",
        "      <td>553066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Camden County</td>\n",
+       "      <td>Camden</td>\n",
        "      <td>507367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Passaic County</td>\n",
+       "      <td>Passaic</td>\n",
        "      <td>504041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>Morris County</td>\n",
+       "      <td>Morris</td>\n",
        "      <td>494383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Burlington County</td>\n",
+       "      <td>Burlington</td>\n",
        "      <td>446367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>Mercer County</td>\n",
+       "      <td>Mercer</td>\n",
        "      <td>368762</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Somerset County</td>\n",
+       "      <td>Somerset</td>\n",
        "      <td>330176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Gloucester County</td>\n",
+       "      <td>Gloucester</td>\n",
        "      <td>290852</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>Atlantic County</td>\n",
+       "      <td>Atlantic</td>\n",
        "      <td>268539</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>Cumberland County</td>\n",
+       "      <td>Cumberland</td>\n",
        "      <td>153400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>Sussex County</td>\n",
+       "      <td>Sussex</td>\n",
        "      <td>142298</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>Hunterdon County</td>\n",
+       "      <td>Hunterdon</td>\n",
        "      <td>125051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>Warren County</td>\n",
+       "      <td>Warren</td>\n",
        "      <td>106293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>Cape May County</td>\n",
+       "      <td>Cape May</td>\n",
        "      <td>93705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>Salem County</td>\n",
+       "      <td>Salem</td>\n",
        "      <td>63336</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1263,29 +1263,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                 county  pop2019\n",
-       "Rank                            \n",
-       "1         Bergen County   929999\n",
-       "2      Middlesex County   826698\n",
-       "3          Essex County   793555\n",
-       "4         Hudson County   668631\n",
-       "5       Monmouth County   623387\n",
-       "6          Ocean County   591939\n",
-       "7          Union County   553066\n",
-       "8         Camden County   507367\n",
-       "9        Passaic County   504041\n",
-       "10        Morris County   494383\n",
-       "11    Burlington County   446367\n",
-       "12        Mercer County   368762\n",
-       "13      Somerset County   330176\n",
-       "14    Gloucester County   290852\n",
-       "15      Atlantic County   268539\n",
-       "16    Cumberland County   153400\n",
-       "17        Sussex County   142298\n",
-       "18     Hunterdon County   125051\n",
-       "19        Warren County   106293\n",
-       "20      Cape May County    93705\n",
-       "21         Salem County    63336"
+       "          county  pop2019\n",
+       "Rank                     \n",
+       "1         Bergen   929999\n",
+       "2      Middlesex   826698\n",
+       "3          Essex   793555\n",
+       "4         Hudson   668631\n",
+       "5       Monmouth   623387\n",
+       "6          Ocean   591939\n",
+       "7          Union   553066\n",
+       "8         Camden   507367\n",
+       "9        Passaic   504041\n",
+       "10        Morris   494383\n",
+       "11    Burlington   446367\n",
+       "12        Mercer   368762\n",
+       "13      Somerset   330176\n",
+       "14    Gloucester   290852\n",
+       "15      Atlantic   268539\n",
+       "16    Cumberland   153400\n",
+       "17        Sussex   142298\n",
+       "18     Hunterdon   125051\n",
+       "19        Warren   106293\n",
+       "20      Cape May    93705\n",
+       "21         Salem    63336"
       ]
      },
      "execution_count": 16,
@@ -1299,76 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nj_pop['county'] = nj_pop['county'].apply(lambda x: str(x)[:-7])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>county</th>\n",
-       "      <th>pop2019</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rank</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bergen</td>\n",
-       "      <td>929999</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      county  pop2019\n",
-       "Rank                 \n",
-       "1     Bergen   929999"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nj_pop.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1691,7 @@
        "0             0.014895  0.000000     0.000000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
