--- a/analysis/covid-19-state.ipynb
+++ b/analysis/covid-19-state.ipynb
@@ -1402,35 +1402,10 @@
    "outputs": [],
    "source": [
     "data = Path('../data/counties')\n",
-    "state_pop_path = data / Path(state.replace(' ', '').lower() + '.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('../data/counties/newyork.csv')"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "state_pop_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "state_pop_path = data / Path(state.replace(' ', '').lower() + '.csv')\n",
+    "\n",
+    "state_pop_path\n",
+    "\n",
     "state_pop = pd.read_csv(state_pop_path)"
    ]
   },
